--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wiki-tag",
+  "name": "wikitag-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,7 +13,16 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "wikitag-shared": "1.0.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "eslint": "^6.8.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.19.0",
+    "prettier": "^2.0.4",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
