--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "wikitag",
+  "name": "wikitag-server",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "tslint": "^6.1.1",
-    "tslint-microsoft-contrib": "^6.2.0",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "eslint": "^6.8.0",
+    "prettier": "^2.0.4",
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "build": "yarn lint; yarn run tsc",
-    "lint": "tslint --project tsconfig.json; prettier --write src/*.ts"
+    "build": "yarn run tsc"
   },
   "dependencies": {
     "@types/express": "^4.17.6",
     "express": "^4.17.1",
-    "prettier": "^2.0.4",
-    "wikijs": "^6.0.1"
+    "wikijs": "^6.0.1",
+    "wikitag-shared": "1.0.0"
   }
 }
