--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "wikitag-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:9999/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -10,9 +11,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/socket.io": "^2.1.4",
+    "@types/socket.io-client": "^1.4.32",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "wikitag-shared": "1.0.0"
   },
   "devDependencies": {
